fixed overlapping close btn on booking form

--- a/src/components/styles/bookingForm.module.scss
+++ b/src/components/styles/bookingForm.module.scss
@@ -46,11 +46,16 @@
         "btn btn";
     }
 
+    @media (min-width: 405px) {
+      padding-top: 3em;
+    }
+
     @media (min-width: 520px) {
       height: unset;
       grid-template-rows: unset;
       margin-inline: auto;
       padding-top: unset;
+      overflow-y: unset;
     }
 
     @media (min-width: 980px) {
